# Copyright 2022 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//:utils.bzl", "bool_flag_config", "define_feature")
load("//repositories:pkg_config/pkg_config.bzl", "pkg_config_test_suite")

package(default_visibility = [":__subpackages__"])

bool_flag_config(
    name = "apm",
    build_setting_default = False,
)

bool_flag_config(
    name = "hw_dependency",
    build_setting_default = False,
)

bool_flag_config(
    name = "ml",
    build_setting_default = False,
)

bool_flag_config(
    name = "selinux",
    build_setting_default = False,
)

bool_flag_config(
    name = "metrics",
    build_setting_default = False,
)

bool_flag_config(
    name = "hats",
    build_setting_default = False,
)

bool_flag_config(
    name = "dlc",
    build_setting_default = False,
)

bool_flag_config(
    name = "featured",
    build_setting_default = False,
)

bool_flag_config(
    name = "chromeos",
    build_setting_default = False,
)

bool_flag_config(
    name = "fuzzer",
    build_setting_default = False,
)

bool_flag_config(
    name = "system_cras_rust",
    build_setting_default = False,
)

# Whether to use percetto from the system.
# If False, a stubbed version will be used.
bool_flag_config(
    name = "system_percetto",
    build_setting_default = False,
)

bool_flag_config(
    name = "ucm2_files",
    build_setting_default = True,
)

bool_flag_config(
    name = "cras_always_add_controls_and_iodevs_with_ucm",
    build_setting_default = False,
)

config_setting(
    name = "x86_64_build",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ],
)

cc_library(
    name = "build_config",
    defines = define_feature("//:selinux_build", "CRAS_SELINUX") +
              define_feature("//:apm_build", "HAVE_WEBRTC_APM") +
              define_feature("//:metrics_build", "HAVE_LIB_METRICS") +
              define_feature("//:hats_build", "HAVE_HATS") +
              define_feature("//:fuzzer_build", "HAVE_FUZZER") +
              define_feature("//:cras_always_add_controls_and_iodevs_with_ucm_build", "CRAS_ALWAYS_ADD_CONTROLS_AND_IODEVS_WITH_UCM"),
    target_compatible_with = select({
        ":incompatible_selinux_fuzzer_build": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

config_setting(
    name = "incompatible_selinux_fuzzer_build",
    flag_values = {
        ":fuzzer": "true",
        ":selinux": "true",
    },
)

alias(
    name = "compdb",
    actual = "@compdb",
)

pkg_config_test_suite()
