[workspace]
resolver = "2"
members = [
    "audio_processor",
    "cras/common",
    "cras/server/platform/dlc",
    "cras/server/platform/features",
    "cras/server/s2",
    "cras/src/dsp/rust",
    "cras/src/server/rust",
    "cras/src/server/rust/staticlib",
    "rock",
    "rules/cbindgen",
    "sof_tests",
]

[profile.release]
lto = true
panic = "abort"
overflow-checks = true

[patch.crates-io]
audio_processor = { path = "audio_processor" }
cras = { path = "cras/src/server/rust" }
cras_common = { path = "cras/common" }
cras_dlc = { path = "cras/server/platform/dlc" }
cras_features_backend = { path = "cras/server/platform/features" }
cras_s2 = { path = "cras/server/s2" }
dsp_rust = { path = "cras/src/dsp/rust" }

# When building out of ChromiumOS, we do not actually use system_api.
# Stub it to avoid downloading the platform2 repository.
# See also: https://github.com/rust-lang/cargo/issues/4544
system_api = { path = "repositories/system_api_stub" } # ignored by ebuild
# Replace the above with the below when testing with ChromiumOS features.
# For out of chroot using TOT platform2:
# system_api = { git = "https://chromium.googlesource.com/chromiumos/platform2", version = ">=0.24.53" } # ignored by ebuild
# For testing in-repo changes in chroot:
# system_api = { path = "../../platform2/system_api" } # ignored by ebuild

featured = { path = "repositories/featured_stub" } # ignored by ebuild
minijail = { path = "repositories/minijail_stub" } # ignored by ebuild
