[package]
name = "audio_processor"
version = "0.1.0"
edition = "2021"
authors = ["The ChromiumOS Authors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable tests that only works with Bazel.
bazel = []

[dependencies]
anyhow = "1.0.70"
assert_matches = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
dasp_sample = "0.11.0"
hound = "3.4.0"
libc = "0.2.124"
nix = { version = "0.28.0", features = ["resource", "socket", "uio"] }
serde = { version = "1.0.52", features = ["derive"]}
serde_json = "1.0.96"
thiserror = "1.0.30"
log = "0.4.17"
protobuf = "3.2.0"
zerocopy = "0.7.32"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.73"
protobuf-codegen = "3.2.0"
protobuf-parse = "3.2.0"

[dev-dependencies]
tempfile = "3.4.0"
