# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("//repositories:pkg_config/utils.bzl", "generate_pc")

package(default_visibility = ["//dist:__pkg__"])

generate_pc(
    name = "libcras.pc",
    src = "libcras.pc.in",
)

package_group(
    name = "internal",
    packages = [
        "-//cras/include/...",
        "//cras/...",
    ],
)
