[package]
name = "cros_alsa"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2018"
description = "The Chromium OS alsa-lib wrapper"

[dependencies]
alsa-sys = "0.2.0"
cros_alsa_derive = "*"
sys_util = "*"
libc = "0.2.65"
remain = "0.2.1"

[patch.crates-io]
cros_alsa_derive = { path = "cros_alsa_derive" }
sys_util = { path = "../../../platform/crosvm/common/sys_util" } # ignored by ebuild
