[workspace]

[package]
name = "cros_alsa"
version = "0.1.0"
authors = ["The ChromiumOS Authors"]
edition = "2018"
description = "The Chromium OS alsa-lib wrapper"

[dependencies]
alsa-sys = "0.2.0"
cros_alsa_derive = { path = "cros_alsa_derive" } # provided by ebuild
libc = "0.2.65"
log = "0.4"
remain = "0.2.1"
